--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -50,7 +50,7 @@
 
 .sidebar footer a {
   width: 100%;
-  bacground: transparent;
+  background: transparent;
   color: var(--green-500);
   border: 1px solid var(--green-500);
   border-radius: 8px;
