--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -1,19 +1,17 @@
-.post{
-
-  display:flex;
-  flex-direction:column;
+.post {
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  padding:2.5rem;
+  padding: 2.5rem;
   margin-bottom: 2rem;
   border-radius: 8px;
   background: var(--gray-800);
-  
 }
 
-.post header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+.post header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
 }
 
@@ -23,62 +21,107 @@ header p {
   line-height: 1.6;
 }
 
-.author{
-  display:flex;
-  gap:1rem;
-  align-items:center; 
+.author {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
 }
 
 .avatar {
-    /* box-sizing: initial; //una forma de los bordes no alterear el tamaño de la imagen */
-  
-    width: calc(3rem + 12px);
-    height: calc(3rem + 12px);
-    border-radius: 8px;
-  
-    border: 4px solid var(--gray-800);
-    outline: 2px solid var(--green-500);
+  /* box-sizing: initial; //una forma de los bordes no alterear el tamaño de la imagen */
+
+  width: calc(3rem + 12px);
+  height: calc(3rem + 12px);
+  border-radius: 8px;
+
+  border: 4px solid var(--gray-800);
+  outline: 2px solid var(--green-500);
 }
 
-.authorInfo{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.authorInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .authorInfo strong {
-    
-    color: var(--gray-100);
-    line-height: 1.6;
+  color: var(--gray-100);
+  line-height: 1.6;
 }
-  
+
 .authorInfo span {
-    font-size: 0.875rem;
-    color: var(--gray-400);
-    line-height: 1.6;
+  font-size: 0.875rem;
+  color: var(--gray-400);
+  line-height: 1.6;
 }
 
 header time {
- font-size:0.875rem ;
- color:var(--gray-400)
+  font-size: 0.875rem;
+  color: var(--gray-400);
 }
 
-.content{
-    margin-top:1.5rem;
-    line-height:1.6;
-    color:var(--gray-300);
+.content {
+  margin-top: 1.5rem;
+  line-height: 1.6;
+  color: var(--gray-300);
 }
 
-.content p{
-    margin-top:1.5rem;
+.content p {
+  margin-top: 1.5rem;
 }
 
-.content a{
-    font-weight:bold;
-    color:var(--green-500);
-    text-decoration:none;
+.content a {
+  font-weight: bold;
+  color: var(--green-500);
+  text-decoration: none;
 }
 
-.content a:hover{
-  color:var(--green-300);
+.content a:hover {
+  color: var(--green-300);
+}
+
+.commentForm {
+  /* display: flex; */
+  width: 100%;
+  flex-direction: column;
+  margin-top: 1.5rem;
+  padding-top: 1.5rem;
+  border-top: 1px solid var(--gray-600);
+  gap: 2rem;
+}
+
+.coomentForm > strong {
+  line-height: 1.6;
+  color: var(--gray-100);
+}
+
+.commentForm textarea {
+  width: 100%;
+  background-color: var(--gray-900);
+  border: 0;
+  resize: none;
+  outline: mone;
+  height: 6rem;
+  margin-top: 1rem;
+  padding: 1rem;
+  border-radius: 8px;
+  color: var(--gray-100);
+  line-height: 1.4;
+}
+
+.commentForm button {
+  background-color: var(--green-500);
+  padding: 1rem 1.5rem;
+  color: var(--gray-100);
+  font-weight: bold;
+  margin-top: 1rem;
+  border-radius: 8px;
+  border: 0;
+  cursor: pointer;
+
+  transition: background-color 0.1s;
+}
+
+.commentForm button:hover {
+  background: var(--green-300);
 }
