--- a/src/components/Comment.module.css
+++ b/src/components/Comment.module.css
@@ -1,35 +1,92 @@
-.comment{
-  display:flex;
-  margin-top:1.5rem;
-  gap:1rem;
+.comment {
+  display: flex;
+  margin-top: 1.5rem;
+  gap: 1rem;
 }
 
-.comment > img{
+.comment > img {
   width: 3rem;
   height: 3rem;
   border-radius: 8px;
-
 }
 
 .commentBox {
-  flex:1
+  flex: 1;
 }
 
-.commentContent{
-  background:var(--gray-600);
-  border-radius:8px;
-  height:6rem;
+.commentContent {
+  background: var(--gray-700);
+  border-radius: 8px;
+  padding: 1rem;
 }
 
-.commentContent header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
- 
+.commentContentHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
-.authorAndTime{
-  display:flex;
-  flex-direction:column;
+.authorAndTime strong {
+  display: block;
+  line-height: 1.6;
+  font-size: 0.875rem;
 }
 
+.authorAndTime time {
+  display: block;
+  line-height: 1.6;
+  font-size: 0.75rem;
+  color: vaq(-gray-400);
+}
+
+.comment header button {
+  background: transparent;
+  border: 0;
+  color: var(--gray-400);
+  cursor: pointer;
+
+  line-height: 0;
+  border-radius: 4px;
+}
+
+.comment header button:hover {
+  color: var(--red-500);
+}
+
+.commentContent p {
+  margin-top: 1rem;
+  color: var(--gray-300);
+}
+
+.commentBox footer {
+  margin-top: 1rem;
+}
+
+.commentBox footer button {
+  background: transparent;
+  border: none;
+  color: var(--gray-400);
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  border-radius: 2px;
+}
+
+.commentBox footer button:hover {
+  color: var(--green-300);
+}
+
+.commentBox footer button svg {
+  margin-right: 0.5rem;
+}
+
+.commentBox footer button {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.commentBox footer button span::before {
+  content: '\2022';
+  padding: 0 0.25rem;
+}
