--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -8,7 +8,7 @@
   background: var(--gray-800);
 }
 
-.post header {
+.post > header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -109,12 +109,12 @@ header time {
   line-height: 1.4;
 }
 
-.commentForm footer{
+.commentForm footer {
   visibility: hidden;
   max-height: 0;
 }
 
-.commentForm:focus-within footer{
+.commentForm:focus-within footer {
   visibility: visible;
   max-height: none;
 }
@@ -136,7 +136,6 @@ header time {
   background: var(--green-300);
 }
 
-
-.commentList{
-  margin-top:2rem;
+.commentList {
+  margin-top: 2rem;
 }
