--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -121,8 +121,13 @@ header time {
   transition: background-color 0.1s;
 }
 
-.commentForm button:hover {
+.commentForm button:not(:disabled):hover {
   background: var(--green-300);
+}
+
+.commentForm button:disabled {
+  cursor: not-allowed;
+  opacity: 0.7;
 }
 
 .commentList {
